feat: only add restart button to services fetched from nomad
